# testhound

./: .gitignore  LICENSE  PRIVACY.md  README.md  index.html  install.sh  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/scripts/: testhound-diff.mjs
.github/workflows/: ci.yml  release.yml  testhound-pr-diff.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: step-hook.cjs
src-tauri/capabilities/: default.json
src-tauri/examples/: seed_demo.rs
src-tauri/icons/: icon.icns
src-tauri/src/: assistant.rs  error.rs  lfs.rs  lib.rs  main.rs  merge.rs
src-tauri/src/app/: mod.rs  sample.rs
src-tauri/src/automation/: agent.rs  mod.rs
src-tauri/src/domain/: mod.rs  steps.rs
src-tauri/src/git/: mod.rs
src-tauri/src/playwright/: mod.rs
src-tauri/src/repo/: case_file.rs  mod.rs  runs.rs
src-tauri/tests/: automation_flow.rs  history_flow.rs  merge_flow.rs  playwright_flow.rs  runs_flow.rs  storage_flow.rs  sync_flow.rs
src/components/: ErrorBoundary.tsx  InitPlaywrightDialog.tsx
src/components/shell/: ActivityConsole.tsx  AppShell.tsx  AssistantPanel.tsx  CommandPalette.tsx  RepoBar.tsx  Sidebar.tsx
src/components/ui/: Badge.tsx  Button.tsx  CodeEditor.tsx  DiffView.tsx  RunProgressBar.tsx
src/lib/: changes.ts  diff.ts  ipc.ts  telemetry.ts  types.ts  useAutoSync.ts  useRunEvents.ts  useSync.ts  utils.ts
src/screens/: Automation.tsx  CaseEditor.tsx  CaseHistory.tsx  Cases.tsx  Changes.tsx  Dashboard.tsx  GenerationDrawer.tsx  MergeView.tsx  NewRun.tsx  Onboarding.tsx  Placeholder.tsx  Reports.tsx  RunCasePanel.tsx  RunView.tsx  Runs.tsx  Settings.tsx  SpecEditorModal.tsx  TriageModal.tsx
src/store/: activity.ts  agent.ts  assistant.ts  playwrightSetup.ts  prefs.ts  session.ts  step.ts
src/styles/: index.css
